--- a/frontend/app.json
+++ b/frontend/app.json
@@ -31,6 +31,9 @@
         "projectId": "fbf10b44-8902-46a6-bbe0-6551f4a0c633"
       }
     },
-    "owner": "theparadoxe"
+    "owner": "Daemon Craft",
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
