--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.9.0",
     "dotenv": "^17.2.2",
     "expo": "~54.0.10",
     "expo-camera": "^17.0.8",
+    "expo-font": "~14.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "^19.0.7",
@@ -25,13 +27,14 @@
     "react-hook-form": "^7.63.0",
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.26.9",
     "react-native-purchases": "^9.5.0",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.13.0",
+    "react-native-worklets": "^0.6.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
