--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/
 frontend/node_modules
-backend/node_modules
 backend/.env
 frontend/.env
 frontend/.expo
+maplepath-473105-1dbe9e7ab7ea.json
