--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,21 @@
-FROM node:18-alpine
+FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-COPY prisma ./prisma/
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install dependencies
-RUN npm ci --only=production
-RUN npx prisma generate
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy source code
+# Copy application code
 COPY . .
-
-# Build TypeScript
-RUN npm run build
 
 # Expose port
 EXPOSE 8080
 
-# Start server
-CMD ["npm", "start"]
+# Run database migrations and start server
+CMD ["sh", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8080"]
