--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/settlein-api:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA', '.']
 
   # Push to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/settlein-api:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA']
 
   # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -13,17 +13,19 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'settlein-api'
+      - 'maplepath-api'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/settlein-api:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'NODE_ENV=production'
+      - 'DATABASE_URL_PROD=$DATABASE_URL_PROD,SECRET_KEY=$SECRET_KEY,FIREBASE_CREDENTIALS_PATH=/app/firebase-credentials.json'
       - '--set-cloudsql-instances'
-      - '$PROJECT_ID:us-central1:settlein-db'
+      - '$PROJECT_ID:us-central1:maplepath-db'
+      - '--port'
+      - '8080'
 
 timeout: 900s
