Add CV generation features with Google Vertex AI integration and related database tables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,27 @@
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/maplepath_dev
-DATABASE_URL_PROD=postgresql://username:password@cloudsql_host:5432/maplepath_prod
+# API Configuration
+API_V1_STR=/api/v1
+PROJECT_NAME=MaplePath API
 
-# JWT
-SECRET_KEY=your-secret-key-here
+# Database Configuration
+# Local development
+DATABASE_URL=postgresql://user:password@localhost:5432/maplepath_db
+
+# Production - Cloud SQL with Unix socket (for Cloud Run)
+# DATABASE_URL=postgresql://user:password@/dbname?host=/cloudsql/PROJECT_ID:REGION:INSTANCE_NAME
+DATABASE_URL_PROD=postgresql://user:password@/maplepath_prod?host=/cloudsql/PROJECT_ID:REGION:INSTANCE_NAME
+
+# JWT Configuration
+SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Firebase
+# Firebase Configuration (for Google Authentication)
 FIREBASE_CREDENTIALS_PATH=./firebase-credentials.json
 
-# API
-API_V1_STR=/api/v1
-PROJECT_NAME=MaplePath API
+# Google Cloud / Vertex AI Configuration
+GCP_PROJECT_ID=your-gcp-project-id
+GCP_LOCATION=us-central1
+VERTEX_AI_MODEL=gemini-1.5-flash
+
+# Cloud Storage (for PDF storage - optional)
+GCS_BUCKET_NAME=maplepath-cvs
