--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,11 +1,20 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA', '.']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/maplepath-api:latest'
+      - '.'
 
   # Push to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA']
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/maplepath-api:latest']
 
   # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -22,10 +31,24 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'DATABASE_URL_PROD=$DATABASE_URL_PROD,SECRET_KEY=$SECRET_KEY,FIREBASE_CREDENTIALS_PATH=/app/firebase-credentials.json'
+      - 'DATABASE_URL=${_DATABASE_URL},SECRET_KEY=${_SECRET_KEY},FIREBASE_CREDENTIALS_PATH=/app/firebase-credentials.json'
       - '--set-cloudsql-instances'
-      - '$PROJECT_ID:us-central1:maplepath-db'
+      - '${_CLOUD_SQL_CONNECTION_NAME}'
       - '--port'
       - '8080'
+
+# Images to be stored in Container Registry
+images:
+  - 'gcr.io/$PROJECT_ID/maplepath-api:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/maplepath-api:latest'
+
+# Substitutions (configure in Cloud Build trigger settings)
+substitutions:
+  _DATABASE_URL: 'postgresql://user:password@/dbname?host=/cloudsql/${_CLOUD_SQL_CONNECTION_NAME}'
+  _SECRET_KEY: 'your-secret-key-here'
+  _CLOUD_SQL_CONNECTION_NAME: 'PROJECT_ID:REGION:INSTANCE_NAME'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 timeout: 900s
