--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,3 +13,10 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 httpx==0.25.2
 
+# Google Vertex AI
+google-cloud-aiplatform==1.38.0
+
+# PDF Generation
+reportlab==4.0.7
+PyPDF2==3.0.1
+
