--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "expo": "~54.0.10",
     "expo-camera": "^17.0.8",
